# requirements_dev_crew

./: .gitignore  README.md  pyproject.toml  pytest.ini  run_tests.py  streamlined_crewai_framework.md
.config/: encryption.key
documents/: architecture.md  icd.md  srs.md  standards.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: index.ts  useAPI.ts  useFileUpload.ts  useWebSocket.ts
frontend/src/services/: api.ts  index.ts  websocket.ts
frontend/src/types/: apiTypes.ts  index.ts  ui.ts
references/: Phase_3_Frontend_Implementation_Plan.md  crewai_requirements_ui_template.tsx
src/.config/: agent_configs.json  api_keys.enc  encryption.key
src/api/: main.py
src/api/models/: schemas.py
src/api/routes/: __init__.py  auth.py  config.py  crew.py  files.py  websocket.py
src/api/services/: __init__.py  config_service.py  crew_service.py  file_processor.py  websocket_manager.py
src/requirement_dev/: crew.py  main.py
src/requirement_dev/config/: agents.yaml  tasks.yaml
tests/: README.md  conftest.py  test_api_basic.py  test_crew_execution.py  test_file_operations.py  test_integration.py  test_websocket.py
tests/utils/: api_client.py  websocket_client.py
