[project]
name = "requirement_dev"
version = "0.1.0"
description = "requirement_dev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
requirement_dev = "requirement_dev.main:run"
run_crew = "requirement_dev.main:run"
train = "requirement_dev.main:train"
replay = "requirement_dev.main:replay"
test = "requirement_dev.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
